# goit-algo-hw-10

./: README.md  pyproject.toml
j01/: main1.py  main2.py
