[project]
name = "goit-algo-hw-10"
version = "0.1.0"
description = "Домашня робота до тем 9 та 10"

authors = [
    {name = "youry07",email = "youry@ukr.net"}
]

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "sympy (>=1.14.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
    
]

[project.scripts]
main1 = "j01.main1:main"
main2 = "j01.main2:main"

[tool.poetry]
packages = [{include = "j01", from = "."}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"